--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camping Next Week!</title>
+
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/style/style.css">
+    <script src="./assets/js/jQuery v3.7.1.js"></script>
 </head>
 <body>
-    
+    <div class="logo">
+        <img src="./assets/images/logo.png.png" alt="My logo">
+    </div>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
