--- a/index.html
+++ b/index.html
@@ -3,16 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camping Next Week!</title>
-
+    <title>下周去露營！</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/style/style.css">
     <script src="./assets/js/jQuery v3.7.1.js"></script>
 </head>
 <body>
-    <div class="logo">
-        <img src="./assets/images/logo.png.png" alt="My logo">
+    <div id="app">
+        <header class="header">
+            <div class="logo">
+            <img src="./assets/images/logo.png.png" alt="My logo">
+            </div>
+        </header>
+
+        <section class="search">
+            <div class="search-container">
+                <img src="./assets/images/search.png" alt="search" class="search-icon">
+                <input type="text" id="search" placeholder="這周去哪露?" class="search-input">
+                <script>
+                    const searchIcon = document.querySelector('.search-icon');
+                    const searchInput = document.querySelector('.search-input');
+                    searchIcon.addEventListener('click',()=>{
+                        searchInput.classList.toggle('active');
+                    })
+                </script>
+            </div>
+        </section>
+
+        <main class="main">
+            <div class="main-container">
+
+            </div>
+        </main>
+
+        <main class="result">
+            <div class="result-container">
+                <div class="result__box">
+                    <div class="result__box-img">
+                        <img src="" alt="" width="150px" height="150px">
+                    </div>
+                    <div class="result__box-info">
+                        <div class="result__box-info-title">露營地名稱</div>
+                        <div class="result__box-info-address">地址</div>
+                        <!-- <div class="result__box-info-phone">電話</div>
+                        <div class="result__box-info-website">網站</div> -->
+                    </div>
+                    <div class="like-btn">
+                        <button type="button" width="50px" height="50px">+</button>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
+    
     <script src="assets/js/app.js"></script>
 </body>
 </html>
