style: 渲染結果樣式

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>下周去露營！</title>
     <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/style/style.css">
+    
     <script src="./assets/js/jQuery v3.7.1.js"></script>
 </head>
 <body>
@@ -19,8 +21,8 @@
 
         <section class="search">
             <div class="search-container">
-                <img src="./assets/images/search.png" alt="search" class="search-icon">
-                <input type="text" id="search" placeholder="這周去哪露?" class="search-input">
+                <i class="fa-solid fa-magnifying-glass search-icon"></i>
+                <input type="text" id="search" placeholder="下周去哪露?" class="search-input">
                 <script>
                     const searchIcon = document.querySelector('.search-icon');
                     const searchInput = document.querySelector('.search-input');
