feat: 新增自然步道渲染

--- a/campDetail.html
+++ b/campDetail.html
@@ -50,7 +50,21 @@
                         </div>
                 </div>
                 <div class="trail-container">
-                    
+                <h1 class="trail">鄰近自然景步道</h1>
+                    <div class="trail-wrapper">
+                        <div class="trail-title">
+                        <p>所在地區: 宜蘭縣</p>
+                    </div>
+                    <div class="trail-list">
+                        <div class="list-name">
+                            <p>步道名稱:南澳古道</p>
+                            <p>海拔高度:350</p>
+                            <p>步道總長度:1.5公里</p>
+                            <p>步道難易度: 1</p>
+                            <p>步道說明:土實地</p>
+                        </div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </main>
