fix: 修正露營資料頁面搜尋結果顯示

--- a/campDetail.html
+++ b/campDetail.html
@@ -69,13 +69,15 @@
             </div>
         </main>
 
-        <!-- <main class="result" display="none">
+        <main class="result">
             <div class="result-container">
                 
             </div>
-        </main> -->
+        </main>
     </div>
-
+    <script>
+        $('.result').hide()
+    </script>
     <script src="assets/js/app.js"></script>
     
 </body>
