--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <div class="result-container">
                 
             </div>
+            <div class="result-loading" id="loading">
+                <p>loading...</p>
+            </div>
         </main>
     </div>
     
