--- a/campDetail.html
+++ b/campDetail.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="manifest" href="manifest.json" />
     
     <script src="./assets/js/jQuery v3.7.1.js"></script>
 </head>
